# when-due

./: .eslintrc.cjs  .gitignore  .prettierrc.cjs  CHANGELOG.md  CONTRIBUTING.md  GUIDE.md  LICENSE  README.md  REDESIGN_v0.2.md  RELEASE_NOTES.md  RELEASE_PACKAGE.md  TECHNICAL_SUMMARY.md  TESTING.md  V0.1.0_COMPLETE.md  index.html  package-lock.json  package.json  svelte.config.js  test-integration.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml
_app/: version.json
_app/immutable/assets/: 2.66304b63.css  _layout.60e71c55.css  _page.e964e5f9.css
_app/immutable/chunks/: index.13ea0073.js  index.c7616b74.js  scheduler.3169f054.js  singletons.f740169a.js  web-db.89208968.js
_app/immutable/entry/: app.d88a2c53.js  start.af4ac505.js
_app/immutable/nodes/: 0.3dc73398.js  1.e64f475d.js  2.77501d32.js
docs/: API.md  ARCHITECTURE.md  DATABASE.md  SETUP.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  utils.rs
src-tauri/src/db/: mod.rs
src-tauri/src/handlers/: attachment.rs  category.rs  mod.rs  subtask.rs  task.rs  util.rs
src-tauri/src/sync/: mod.rs
src/lib/components/: CapacityBar.svelte  FilterSidebar.svelte  FocusDashboard.svelte  QuickAddInput.svelte  SettingsPanel.svelte  TaskCard.svelte  TaskDetailPanel.svelte  ToastStack.svelte
src/lib/services/: api.ts  notifications.ts
src/lib/stores/: categories.ts  tasks.ts  toasts.ts  ui.ts
src/lib/utils/: date-formatter.ts  deadline-parser.test.ts  formatting.ts  (+9 more)
src/routes/: +page.svelte
